added import.sh, which is now able to import svr3as-1989-10-03.svr3 and svr3ld-1989-10-03.svr3

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 *~
 /asi
+/test.svr3
 /test.o
 /svr3as-19??-??-??
 /svr3as-19??-??-??.svr3
+/svr3ld-19??-??-??
+/svr3ld-19??-??-??.svr3
+/import.tmp
+/import_src
