added info about SunOS 4.01 assembler and linker

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 /svr3as-19??-??-??.svr3
 /svr3ld-19??-??-??
 /svr3ld-19??-??-??.svr3
+/sunos4as-19??-??-??
+/sunos4as-19??-??-??.svr3
+/sunos4ld-19??-??-??
+/sunos4ld-19??-??-??.svr3
 /import.tmp
 /import_src
 /try/
