added sunos4as-1988-11-16.nasm, a port of sunos4as-1988-11-16.svr3 to Linux i386

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 /sunos4as-19??-??-??.svr3
 /sunos4ld-19??-??-??
 /sunos4ld-19??-??-??.svr3
+/sunos4ld-19??-??-??.o
+/sunos4ld-19??-??-??.elf
+/sunos4as-19??-??-??.sym.inc.nasm
+/sunos4as-19??-??-??.svr3.lst
 /import.tmp
 /import_src
 /try/
